--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-validator": "^6.12.1",
     "forever": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
+    "md5-file": "^5.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "morgan": "^1.10.0",
