--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "convert-excel-to-json": "^1.7.0",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "excel4node": "^1.7.2",
     "express": "^4.17.1",
@@ -30,6 +31,7 @@
     "mysql2": "^2.3.3",
     "nodemailer": "^6.6.3",
     "process": "^0.11.10",
+    "qs": "^6.10.3",
     "querystring": "^0.2.1",
     "sha256": "^0.2.0",
     "sharp": "^0.23.2",
